@@ -4,18 +4,26 @@ package org.hiero.mirror.importer.parser.contractlog;
 
 import static org.hiero.mirror.common.util.DomainUtils.trim;
 import static org.hiero.mirror.importer.parser.contractlog.AbstractSyntheticContractLog.TRANSFER_SIGNATURE;
+import static org.hiero.mirror.importer.parser.contractlog.SyntheticContractLogServiceImpl.CONTRACT_LOG_MARKER;
+import static org.hiero.mirror.importer.parser.contractlog.SyntheticLogTestUtils.aggregateExpectedContractResultBloom;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.mockito.Mockito.*;
 
 import com.google.common.primitives.Longs;
 import java.util.*;
 import java.util.function.BinaryOperator;
+import org.hiero.mirror.common.CommonProperties;
 import org.hiero.mirror.common.domain.DomainBuilder;
+import org.hiero.mirror.common.domain.SystemEntity;
 import org.hiero.mirror.common.domain.contract.ContractLog;
+import org.hiero.mirror.common.domain.contract.ContractResult;
 import org.hiero.mirror.common.domain.entity.Entity;
 import org.hiero.mirror.common.domain.entity.EntityId;
+import org.hiero.mirror.common.util.DomainUtils;
+import org.hiero.mirror.common.util.LogsBloomFilter;
 import org.hiero.mirror.importer.config.CacheProperties;
 import org.hiero.mirror.importer.domain.EvmAddressMapping;
+import org.hiero.mirror.importer.parser.record.entity.EntityProperties;
 import org.hiero.mirror.importer.parser.record.entity.ParserContext;
 import org.hiero.mirror.importer.repository.EntityRepository;
 import org.junit.jupiter.api.BeforeEach;
@@ -33,6 +41,7 @@ class SyntheticLogListenerTest {
     private static final EntityId ENTITY_1 = domainBuilder.entityId();
     private static final EntityId ENTITY_2 = domainBuilder.entityId();
     private static final EntityId ENTITY_3 = domainBuilder.entityId();
+    private static final EntityId CONTRACT_ENTITY = domainBuilder.entityId();
 
     private static final byte[] LONG_ZERO_1 = trim(Longs.toByteArray(ENTITY_1.getNum()));
     private static final byte[] LONG_ZERO_2 = trim(Longs.toByteArray(ENTITY_2.getNum()));
@@ -41,24 +50,28 @@ class SyntheticLogListenerTest {
     private static final byte[] EVM_1 = domainBuilder.evmAddress();
     private static final byte[] EVM_2 = domainBuilder.evmAddress();
     private static final byte[] EVM_3 = domainBuilder.evmAddress();
+    private static final byte[] CONTRACT_EVM = domainBuilder.evmAddress();
 
     @Mock
     private EntityRepository entityRepository;
 
+    private EntityProperties entityProperties;
     private ParserContext parserContext;
     private SyntheticLogListener listener;
 
     @BeforeEach
     void setup() {
+        entityProperties = new EntityProperties(new SystemEntity(CommonProperties.getInstance()));
         parserContext = new ParserContext();
-        listener = new SyntheticLogListener(parserContext, new CacheProperties(), entityRepository);
+        listener = new SyntheticLogListener(parserContext, new CacheProperties(), entityRepository, entityProperties);
     }
 
     @Test
     void cachesDbResults() {
         final var contractLog = syntheticTransferLog(LONG_ZERO_1, LONG_ZERO_2);
-        final var lookupIds = Set.of(ENTITY_1.getId(), ENTITY_2.getId());
-        final var mappings = List.of(evmMap(EVM_1, ENTITY_1), evmMap(EVM_2, ENTITY_2));
+        final var lookupIds = Set.of(ENTITY_1.getId(), ENTITY_2.getId(), CONTRACT_ENTITY.getId());
+        final var mappings =
+                List.of(evmMap(EVM_1, ENTITY_1), evmMap(EVM_2, ENTITY_2), evmMap(CONTRACT_EVM, CONTRACT_ENTITY));
         mockFind(lookupIds, mappings);
 
         listener.onContractLog(contractLog);
@@ -84,7 +97,7 @@ class SyntheticLogListenerTest {
     @Test
     void cachesNoDbResults() {
         final var contractLog = syntheticTransferLog(LONG_ZERO_1, LONG_ZERO_2);
-        final var lookupIds = Set.of(ENTITY_1.getId(), ENTITY_2.getId());
+        final var lookupIds = Set.of(ENTITY_1.getId(), ENTITY_2.getId(), CONTRACT_ENTITY.getId());
         mockFind(lookupIds, List.of());
 
         listener.onContractLog(contractLog);
@@ -111,8 +124,8 @@ class SyntheticLogListenerTest {
     @Test
     void cachesWithSomeDbResults() {
         final var contractLog = syntheticTransferLog(LONG_ZERO_1, LONG_ZERO_2);
-        final var lookupIds = Set.of(ENTITY_1.getId(), ENTITY_2.getId());
-        final var mappings = List.of(evmMap(EVM_1, ENTITY_1));
+        final var lookupIds = Set.of(ENTITY_1.getId(), ENTITY_2.getId(), CONTRACT_ENTITY.getId());
+        final var mappings = List.of(evmMap(EVM_1, ENTITY_1), evmMap(CONTRACT_EVM, CONTRACT_ENTITY));
         mockFind(lookupIds, mappings);
 
         listener.onContractLog(contractLog);
@@ -139,8 +152,9 @@ class SyntheticLogListenerTest {
     @Test
     void queryNonCachedEntries() {
         final var contractLog = syntheticTransferLog(LONG_ZERO_1, LONG_ZERO_2);
-        final var lookupIds = Set.of(ENTITY_1.getId(), ENTITY_2.getId());
-        final var mappings = List.of(evmMap(EVM_1, ENTITY_1), evmMap(EVM_2, ENTITY_2));
+        final var lookupIds = Set.of(ENTITY_1.getId(), ENTITY_2.getId(), CONTRACT_ENTITY.getId());
+        final var mappings =
+                List.of(evmMap(EVM_1, ENTITY_1), evmMap(EVM_2, ENTITY_2), evmMap(CONTRACT_EVM, CONTRACT_ENTITY));
         mockFind(lookupIds, mappings);
 
         listener.onContractLog(contractLog);
@@ -172,7 +186,8 @@ class SyntheticLogListenerTest {
                 .customize(cl -> cl.topic0(TRANSFER_SIGNATURE)
                         .topic1(LONG_ZERO_1)
                         .topic2(LONG_ZERO_3)
-                        .syntheticTransfer(false))
+                        .contractId(CONTRACT_ENTITY)
+                        .synthetic(false))
                 .get();
 
         listener.onContractLog(contractLog);
@@ -181,8 +196,9 @@ class SyntheticLogListenerTest {
         assertLogHasTopics(contractLog, LONG_ZERO_1, LONG_ZERO_2);
         assertLogHasTopics(contractLog2, LONG_ZERO_1, LONG_ZERO_3);
 
-        final var ids = Set.of(ENTITY_1.getId(), ENTITY_2.getId());
-        final var mappings = List.of(evmMap(EVM_1, ENTITY_1), evmMap(EVM_2, ENTITY_2));
+        final var ids = Set.of(ENTITY_1.getId(), ENTITY_2.getId(), CONTRACT_ENTITY.getId());
+        final var mappings =
+                List.of(evmMap(EVM_1, ENTITY_1), evmMap(EVM_2, ENTITY_2), evmMap(CONTRACT_EVM, CONTRACT_ENTITY));
         mockFind(ids, mappings);
 
         submitAndClear();
@@ -210,12 +226,14 @@ class SyntheticLogListenerTest {
         assertLogHasTopics(contractLog, LONG_ZERO_1, LONG_ZERO_2);
         assertLogHasTopics(contractLog2, Longs.toByteArray(entity.getNum()), LONG_ZERO_3);
 
-        final var ids = Set.of(ENTITY_1.getId(), ENTITY_2.getId(), ENTITY_3.getId(), entity.getId());
+        final var ids =
+                Set.of(ENTITY_1.getId(), ENTITY_2.getId(), ENTITY_3.getId(), entity.getId(), CONTRACT_ENTITY.getId());
         final var mappings = List.of(
                 evmMap(EVM_1, ENTITY_1),
                 evmMap(EVM_2, ENTITY_2),
                 evmMap(EVM_3, ENTITY_3),
-                evmMap(newEvm, entity.toEntityId()));
+                evmMap(newEvm, entity.toEntityId()),
+                evmMap(CONTRACT_EVM, CONTRACT_ENTITY));
 
         parserContext.merge(entity.getId(), entity, NO_OP_MERGE);
         mockFind(ids, mappings);
@@ -239,8 +257,9 @@ class SyntheticLogListenerTest {
         listener.onContractLog(contractLog2);
         listener.onContractLog(contractLog3);
 
-        final var ids = Set.of(ENTITY_1.getId(), ENTITY_2.getId());
-        mockFind(ids, Collections.emptyList());
+        final var ids = Set.of(ENTITY_1.getId(), ENTITY_2.getId(), CONTRACT_ENTITY.getId());
+        final var mappings = List.of(evmMap(CONTRACT_EVM, CONTRACT_ENTITY));
+        mockFind(ids, mappings);
 
         submitAndClear();
 
@@ -252,14 +271,441 @@ class SyntheticLogListenerTest {
         assertLogHasTopics(contractLog3, null, null);
     }
 
+    @Test
+    void bloomUsesContractEvmAddressFromCache() {
+        final var contractEvmAddress = domainBuilder.evmAddress();
+        final var contractEntityId = domainBuilder.entityId();
+        final var contractLog = syntheticTransferLogWithContract(LONG_ZERO_1, LONG_ZERO_2, contractEntityId);
+        contractLog.setBloom(CONTRACT_LOG_MARKER);
+
+        final var mappings =
+                List.of(evmMap(EVM_1, ENTITY_1), evmMap(EVM_2, ENTITY_2), evmMap(contractEvmAddress, contractEntityId));
+        when(entityRepository.findEvmAddressesByIds(any())).thenReturn(mappings);
+
+        listener.onContractLog(contractLog);
+        submitAndClear();
+
+        var expectedBloom = createExpectedBloom(trim(contractEvmAddress), contractLog);
+        assertArrayEquals(expectedBloom, contractLog.getBloom());
+    }
+
+    @Test
+    void bloomUsesContractEvmAddressFromParserContext() {
+        final var contractEvmAddress = domainBuilder.evmAddress();
+        final var contractEntity = domainBuilder
+                .entity()
+                .customize(e -> e.evmAddress(contractEvmAddress).timestampRange(null))
+                .get();
+        final var contractEntityId = contractEntity.toEntityId();
+        final var contractLog = syntheticTransferLogWithContract(LONG_ZERO_1, LONG_ZERO_2, contractEntityId);
+        contractLog.setBloom(CONTRACT_LOG_MARKER);
+
+        final var mappings = List.of(evmMap(EVM_1, ENTITY_1), evmMap(EVM_2, ENTITY_2));
+        when(entityRepository.findEvmAddressesByIds(any())).thenReturn(mappings);
+
+        parserContext.merge(contractEntity.getId(), contractEntity, NO_OP_MERGE);
+
+        listener.onContractLog(contractLog);
+        submitAndClear();
+
+        var expectedBloom = createExpectedBloom(trim(contractEvmAddress), contractLog);
+        assertArrayEquals(expectedBloom, contractLog.getBloom());
+    }
+
+    @Test
+    void bloomUsesLongZeroAddressWhenNoEvmAddress() {
+        final var contractEntityId = domainBuilder.entityId();
+        final var contractLog = syntheticTransferLogWithContract(LONG_ZERO_1, LONG_ZERO_2, contractEntityId);
+        contractLog.setBloom(CONTRACT_LOG_MARKER);
+
+        final var mappings = List.of(evmMap(EVM_1, ENTITY_1), evmMap(EVM_2, ENTITY_2));
+        when(entityRepository.findEvmAddressesByIds(any())).thenReturn(mappings);
+
+        listener.onContractLog(contractLog);
+        submitAndClear();
+
+        var longZeroAddress = DomainUtils.toEvmAddress(contractEntityId);
+        var expectedBloom = createExpectedBloom(longZeroAddress, contractLog);
+        assertArrayEquals(expectedBloom, contractLog.getBloom());
+    }
+
+    @Test
+    void bloomNotUpdatedWhenNotMarker() {
+        final var contractEntityId = domainBuilder.entityId();
+        final var originalBloom = domainBuilder.bytes(LogsBloomFilter.BYTE_SIZE);
+        final var contractLog = syntheticTransferLogWithContract(LONG_ZERO_1, LONG_ZERO_2, contractEntityId);
+        contractLog.setBloom(originalBloom);
+
+        when(entityRepository.findEvmAddressesByIds(any())).thenReturn(Collections.emptyList());
+
+        listener.onContractLog(contractLog);
+        submitAndClear();
+
+        assertArrayEquals(originalBloom, contractLog.getBloom());
+    }
+
+    @Test
+    void recordFileBloomUnchangedWhenNoSyntheticLogs() {
+        var existingBloom = domainBuilder.bloomFilter();
+        var recordFile = domainBuilder
+                .recordFile()
+                .customize(r -> r.logsBloom(existingBloom))
+                .get();
+        parserContext.add(recordFile);
+
+        listener.onEnd(recordFile);
+
+        assertArrayEquals(existingBloom, recordFile.getLogsBloom());
+    }
+
+    @Test
+    void recordFileBloomMergesExistingAndSyntheticBlooms() {
+        var existingAddress = domainBuilder.evmAddress();
+        var existingBloomFilter = new LogsBloomFilter();
+        existingBloomFilter.insertAddress(existingAddress);
+        var existingBloom = existingBloomFilter.toArrayUnsafe();
+
+        var consensusTimestamp = domainBuilder.timestamp();
+        var contractResult = domainBuilder
+                .contractResult()
+                .customize(cr -> cr.consensusTimestamp(consensusTimestamp)
+                        .contractId(CONTRACT_ENTITY.getId())
+                        .payerAccountId(domainBuilder.entityId())
+                        .bloom(existingBloom))
+                .get();
+
+        var recordFile = domainBuilder
+                .recordFile()
+                .customize(r -> r.logsBloom(existingBloom))
+                .get();
+        parserContext.add(recordFile);
+
+        var contractLog = syntheticTransferLogWithRecordItem(
+                LONG_ZERO_1, LONG_ZERO_2, CONTRACT_ENTITY, contractResult, consensusTimestamp);
+        contractLog.setBloom(CONTRACT_LOG_MARKER);
+
+        final var mappings =
+                List.of(evmMap(EVM_1, ENTITY_1), evmMap(EVM_2, ENTITY_2), evmMap(CONTRACT_EVM, CONTRACT_ENTITY));
+        when(entityRepository.findEvmAddressesByIds(any())).thenReturn(mappings);
+
+        listener.onContractLog(contractLog);
+
+        var rfBloomBefore =
+                recordFile.getLogsBloom() != null ? recordFile.getLogsBloom().clone() : null;
+
+        listener.onEnd(recordFile);
+
+        assertArrayEquals(
+                aggregateExpectedContractResultBloom(rfBloomBefore, contractResult), recordFile.getLogsBloom());
+    }
+
+    @Test
+    void recordFileBloomUpdatedWhenSyntheticBloomAdded() {
+        var consensusTimestamp = domainBuilder.timestamp();
+        var contractResult = domainBuilder
+                .contractResult()
+                .customize(cr -> cr.consensusTimestamp(consensusTimestamp)
+                        .contractId(CONTRACT_ENTITY.getId())
+                        .payerAccountId(domainBuilder.entityId())
+                        .bloom(null))
+                .get();
+
+        var recordFile =
+                domainBuilder.recordFile().customize(r -> r.logsBloom(null)).get();
+        parserContext.add(recordFile);
+
+        var contractLog = syntheticTransferLogWithRecordItem(
+                LONG_ZERO_1, LONG_ZERO_2, CONTRACT_ENTITY, contractResult, consensusTimestamp);
+        contractLog.setBloom(CONTRACT_LOG_MARKER);
+
+        final var mappings =
+                List.of(evmMap(EVM_1, ENTITY_1), evmMap(EVM_2, ENTITY_2), evmMap(CONTRACT_EVM, CONTRACT_ENTITY));
+        when(entityRepository.findEvmAddressesByIds(any())).thenReturn(mappings);
+
+        listener.onContractLog(contractLog);
+
+        var rfBloomBefore =
+                recordFile.getLogsBloom() != null ? recordFile.getLogsBloom().clone() : null;
+
+        listener.onEnd(recordFile);
+
+        assertArrayEquals(
+                aggregateExpectedContractResultBloom(rfBloomBefore, contractResult), recordFile.getLogsBloom());
+    }
+
+    @Test
+    void recordFileBloomAggregatesMultipleSyntheticLogs() {
+        var existingAddress = domainBuilder.evmAddress();
+        var existingBloomFilter = new LogsBloomFilter();
+        existingBloomFilter.insertAddress(existingAddress);
+        var existingBloom = existingBloomFilter.toArrayUnsafe();
+
+        var consensusTimestamp = domainBuilder.timestamp();
+        var contractResult = domainBuilder
+                .contractResult()
+                .customize(cr -> cr.consensusTimestamp(consensusTimestamp)
+                        .contractId(CONTRACT_ENTITY.getId())
+                        .payerAccountId(domainBuilder.entityId())
+                        .bloom(existingBloom))
+                .get();
+
+        var recordFile = domainBuilder
+                .recordFile()
+                .customize(r -> r.logsBloom(existingBloom))
+                .get();
+        parserContext.add(recordFile);
+
+        var contractLog1 = syntheticTransferLogWithRecordItem(
+                LONG_ZERO_1, LONG_ZERO_2, CONTRACT_ENTITY, contractResult, consensusTimestamp);
+        contractLog1.setBloom(CONTRACT_LOG_MARKER);
+
+        var contractLog2 = syntheticTransferLogWithRecordItem(
+                LONG_ZERO_2, LONG_ZERO_3, CONTRACT_ENTITY, contractResult, consensusTimestamp);
+        contractLog2.setBloom(CONTRACT_LOG_MARKER);
+
+        final var mappings = List.of(
+                evmMap(EVM_1, ENTITY_1),
+                evmMap(EVM_2, ENTITY_2),
+                evmMap(EVM_3, ENTITY_3),
+                evmMap(CONTRACT_EVM, CONTRACT_ENTITY));
+        when(entityRepository.findEvmAddressesByIds(any())).thenReturn(mappings);
+
+        listener.onContractLog(contractLog1);
+        listener.onContractLog(contractLog2);
+
+        var rfBloomBefore =
+                recordFile.getLogsBloom() != null ? recordFile.getLogsBloom().clone() : null;
+
+        listener.onEnd(recordFile);
+
+        assertArrayEquals(
+                aggregateExpectedContractResultBloom(rfBloomBefore, contractResult), recordFile.getLogsBloom());
+    }
+
+    @Test
+    void recordFileBloomAggregatesMultipleLogsEachWithItsOwnContractResult() {
+        var existingAddress = domainBuilder.evmAddress();
+        var cr1BloomFilter = new LogsBloomFilter();
+        cr1BloomFilter.insertAddress(existingAddress);
+        var cr1Bloom = cr1BloomFilter.toArrayUnsafe();
+
+        var consensusTimestamp1 = domainBuilder.timestamp();
+        var contractResult1 = domainBuilder
+                .contractResult()
+                .customize(cr -> cr.consensusTimestamp(consensusTimestamp1)
+                        .contractId(CONTRACT_ENTITY.getId())
+                        .payerAccountId(domainBuilder.entityId())
+                        .bloom(cr1Bloom))
+                .get();
+
+        var cr2BloomAddress = domainBuilder.evmAddress();
+        var cr2BloomFilter = new LogsBloomFilter();
+        cr2BloomFilter.insertAddress(cr2BloomAddress);
+        var cr2Bloom = cr2BloomFilter.toArrayUnsafe();
+
+        var consensusTimestamp2 = domainBuilder.timestamp();
+        var contractResult2 = domainBuilder
+                .contractResult()
+                .customize(cr -> cr.consensusTimestamp(consensusTimestamp2)
+                        .contractId(CONTRACT_ENTITY.getId())
+                        .payerAccountId(domainBuilder.entityId())
+                        .bloom(cr2Bloom))
+                .get();
+
+        var recordFile = domainBuilder
+                .recordFile()
+                .customize(r -> r.logsBloom(cr1Bloom.clone()))
+                .get();
+        parserContext.add(recordFile);
+
+        // Set MARKER while contractResult is still unset so ContractLog#setBloom does not OR the marker into
+        // ContractResult; link the result after, then the only merge into each ContractResult is from onEnd.
+        var contractLog1 = syntheticTransferLogBeforeLinkingContractResult(
+                LONG_ZERO_1, LONG_ZERO_2, CONTRACT_ENTITY, consensusTimestamp1);
+        contractLog1.setBloom(CONTRACT_LOG_MARKER);
+        contractLog1.setContractResult(contractResult1);
+
+        var contractLog2 = syntheticTransferLogBeforeLinkingContractResult(
+                LONG_ZERO_2, LONG_ZERO_3, CONTRACT_ENTITY, consensusTimestamp2);
+        contractLog2.setBloom(CONTRACT_LOG_MARKER);
+        contractLog2.setContractResult(contractResult2);
+
+        final var mappings = List.of(
+                evmMap(EVM_1, ENTITY_1),
+                evmMap(EVM_2, ENTITY_2),
+                evmMap(EVM_3, ENTITY_3),
+                evmMap(CONTRACT_EVM, CONTRACT_ENTITY));
+        when(entityRepository.findEvmAddressesByIds(any())).thenReturn(mappings);
+
+        listener.onContractLog(contractLog1);
+        listener.onContractLog(contractLog2);
+
+        var rfBloomBefore =
+                recordFile.getLogsBloom() != null ? recordFile.getLogsBloom().clone() : null;
+
+        listener.onEnd(recordFile);
+
+        var expectedAfterFirst = aggregateExpectedContractResultBloom(rfBloomBefore, contractResult1);
+        var expectedAfterSecond = aggregateExpectedContractResultBloom(expectedAfterFirst, contractResult2);
+        assertArrayEquals(expectedAfterSecond, recordFile.getLogsBloom());
+
+        assertArrayEquals(
+                mergeLogBloomIntoContractResultBloom(cr1Bloom, contractLog1.getBloom()), contractResult1.getBloom());
+        assertArrayEquals(
+                mergeLogBloomIntoContractResultBloom(cr2Bloom, contractLog2.getBloom()), contractResult2.getBloom());
+    }
+
+    @Test
+    void recordFileBloomAggregatesContractResultsWithoutMutatingContractResultBlooms() {
+        var recordFileAddress = domainBuilder.evmAddress();
+        var recordFileBloomFilter = new LogsBloomFilter();
+        recordFileBloomFilter.insertAddress(recordFileAddress);
+        var recordFileBloom = recordFileBloomFilter.toArrayUnsafe();
+
+        var cr1Address = domainBuilder.evmAddress();
+        var cr1BloomFilter = new LogsBloomFilter();
+        cr1BloomFilter.insertAddress(cr1Address);
+        var cr1Bloom = cr1BloomFilter.toArrayUnsafe();
+
+        var cr2Address = domainBuilder.evmAddress();
+        var cr2BloomFilter = new LogsBloomFilter();
+        cr2BloomFilter.insertAddress(cr2Address);
+        var cr2Bloom = cr2BloomFilter.toArrayUnsafe();
+
+        var cr3Address = domainBuilder.evmAddress();
+        var cr3BloomFilter = new LogsBloomFilter();
+        cr3BloomFilter.insertAddress(cr3Address);
+        var cr3Bloom = cr3BloomFilter.toArrayUnsafe();
+
+        var ts1 = domainBuilder.timestamp();
+        var contractResult1 = domainBuilder
+                .contractResult()
+                .customize(cr -> cr.consensusTimestamp(ts1)
+                        .contractId(CONTRACT_ENTITY.getId())
+                        .payerAccountId(domainBuilder.entityId())
+                        .bloom(cr1Bloom))
+                .get();
+
+        var ts2 = domainBuilder.timestamp();
+        var contractResult2 = domainBuilder
+                .contractResult()
+                .customize(cr -> cr.consensusTimestamp(ts2)
+                        .contractId(CONTRACT_ENTITY.getId())
+                        .payerAccountId(domainBuilder.entityId())
+                        .bloom(cr2Bloom))
+                .get();
+
+        var ts3 = domainBuilder.timestamp();
+        var contractResult3 = domainBuilder
+                .contractResult()
+                .customize(cr -> cr.consensusTimestamp(ts3)
+                        .contractId(CONTRACT_ENTITY.getId())
+                        .payerAccountId(domainBuilder.entityId())
+                        .bloom(cr3Bloom))
+                .get();
+
+        var recordFile = domainBuilder
+                .recordFile()
+                .customize(r -> r.logsBloom(recordFileBloom))
+                .get();
+        parserContext.add(recordFile);
+
+        var contractLog1 =
+                syntheticTransferLogWithRecordItem(LONG_ZERO_1, LONG_ZERO_2, CONTRACT_ENTITY, contractResult1, ts1);
+        var contractLog2 =
+                syntheticTransferLogWithRecordItem(LONG_ZERO_2, LONG_ZERO_3, CONTRACT_ENTITY, contractResult2, ts2);
+        var contractLog3 =
+                syntheticTransferLogWithRecordItem(LONG_ZERO_1, LONG_ZERO_3, CONTRACT_ENTITY, contractResult3, ts3);
+
+        final var mappings = List.of(
+                evmMap(EVM_1, ENTITY_1),
+                evmMap(EVM_2, ENTITY_2),
+                evmMap(EVM_3, ENTITY_3),
+                evmMap(CONTRACT_EVM, CONTRACT_ENTITY));
+        when(entityRepository.findEvmAddressesByIds(any())).thenReturn(mappings);
+
+        var cr1BloomBefore = contractResult1.getBloom().clone();
+        var cr2BloomBefore = contractResult2.getBloom().clone();
+        var cr3BloomBefore = contractResult3.getBloom().clone();
+        var recordFileBloomBefore = recordFile.getLogsBloom().clone();
+
+        listener.onContractLog(contractLog1);
+        listener.onContractLog(contractLog2);
+        listener.onContractLog(contractLog3);
+
+        listener.onEnd(recordFile);
+
+        var expectedRecordBloom = new LogsBloomFilter();
+        expectedRecordBloom.or(recordFileBloomBefore);
+        expectedRecordBloom.or(cr1BloomBefore);
+        expectedRecordBloom.or(cr2BloomBefore);
+        expectedRecordBloom.or(cr3BloomBefore);
+        assertArrayEquals(expectedRecordBloom.toArrayUnsafe(), recordFile.getLogsBloom());
+
+        assertArrayEquals(cr1BloomBefore, contractResult1.getBloom());
+        assertArrayEquals(cr2BloomBefore, contractResult2.getBloom());
+        assertArrayEquals(cr3BloomBefore, contractResult3.getBloom());
+    }
+
+    private ContractLog syntheticTransferLogWithRecordItem(
+            final byte[] topic1,
+            final byte[] topic2,
+            final EntityId contractId,
+            final ContractResult contractResult,
+            final long consensusTimestamp) {
+        return domainBuilder
+                .contractLog()
+                .customize(cl -> cl.topic0(TRANSFER_SIGNATURE)
+                        .topic1(topic1)
+                        .topic2(topic2)
+                        .contractId(contractId)
+                        .synthetic(true)
+                        .consensusTimestamp(consensusTimestamp)
+                        .contractResult(contractResult))
+                .get();
+    }
+
     private ContractLog syntheticTransferLog(final byte[] topic1, final byte[] topic2) {
         return domainBuilder
                 .contractLog()
                 .customize(cl -> cl.topic0(TRANSFER_SIGNATURE)
                         .topic1(topic1)
                         .topic2(topic2)
-                        .syntheticTransfer(true))
+                        .contractId(CONTRACT_ENTITY)
+                        .synthetic(true))
                 .get();
+    }
+
+    private ContractLog syntheticTransferLogWithContract(
+            final byte[] topic1, final byte[] topic2, final EntityId contractId) {
+        return domainBuilder
+                .contractLog()
+                .customize(cl -> cl.topic0(TRANSFER_SIGNATURE)
+                        .topic1(topic1)
+                        .topic2(topic2)
+                        .contractId(contractId)
+                        .synthetic(true))
+                .get();
+    }
+
+    private byte[] createExpectedBloom(final byte[] contractAddress, final ContractLog contractLog) {
+        var logsBloomFilter = new LogsBloomFilter();
+        logsBloomFilter.insertAddress(contractAddress);
+        logsBloomFilter.insertTopic(contractLog.getTopic0());
+        logsBloomFilter.insertTopic(contractLog.getTopic1());
+        logsBloomFilter.insertTopic(contractLog.getTopic2());
+        logsBloomFilter.insertTopic(contractLog.getTopic3());
+        return logsBloomFilter.toArrayUnsafe();
+    }
+
+    private byte[] mergeLogBloomIntoContractResultBloom(
+            final byte[] existingContractResultBloom, final byte[] syntheticLogBloom) {
+        final var bloomFilter = new LogsBloomFilter();
+        if (existingContractResultBloom != null) {
+            bloomFilter.or(existingContractResultBloom);
+        }
+        bloomFilter.or(syntheticLogBloom);
+        return bloomFilter.toArrayUnsafe();
     }
 
     private EvmAddressMapping evmMap(final byte[] evmAddress, final EntityId entityId) {
@@ -278,5 +724,19 @@ class SyntheticLogListenerTest {
     private void submitAndClear() {
         listener.onEnd(domainBuilder.recordFile().get());
         parserContext.clear();
+    }
+
+    private ContractLog syntheticTransferLogBeforeLinkingContractResult(
+            final byte[] topic1, final byte[] topic2, final EntityId contractId, final long consensusTimestamp) {
+        return domainBuilder
+                .contractLog()
+                .customize(cl -> cl.topic0(TRANSFER_SIGNATURE)
+                        .topic1(topic1)
+                        .topic2(topic2)
+                        .contractId(contractId)
+                        .bloom(CONTRACT_LOG_MARKER)
+                        .synthetic(true)
+                        .consensusTimestamp(consensusTimestamp))
+                .get();
     }
 }
